--- a/sequences-starburst/sequences.html
+++ b/sequences-starburst/sequences.html
@@ -4,8 +4,16 @@
     <meta charset="utf-8">
     <title>Sequences sunburst</title>
     <script src="//d3js.org/d3.v4.min.js"></script>
+
+    <!-- bring in some google fonts for us -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,600">
+
+    <link rel="stylesheet" type="text/css"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap">
+
+      
     <link rel="stylesheet" type="text/css" href="sequences.css"/>
   </head>
   <body>
